--- a/css/main.css
+++ b/css/main.css
@@ -150,8 +150,6 @@ section p {
     flex-wrap: wrap;
 }
 
-
-
 a {
     color: white;
 }
@@ -159,4 +157,23 @@ a {
 footer p {
     letter-spacing: 0;
     text-align: center;
+}
+
+.faq-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.faq {
+    width: 45%;
+    text-align: center;
+}
+
+.faq h2 {
+    font-family: 'Arvo', serif;
+    color: white;
+}
+
+section h1 {
+    margin-top: 200px;
 }
