--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,11 @@ body {
 
 p {
     color: white;
-    letter-spacing: 20px;
+    letter-spacing: 10px;
 }
 
 .location {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     letter-spacing: 5px;
 }
 
@@ -39,13 +39,11 @@ p {
     padding: 10px 20px;
     margin-top: 20px;
     letter-spacing: 5px;
-    opacity: 0.5;
     transition: 0.25s;
 }
 
 .email-button:hover {
     padding: 20px 40px;
-    opacity: .8;
 }
 
 @media (max-width: 600px) {
@@ -62,6 +60,7 @@ p {
     position: absolute;
     z-index: 10;
     text-align: center;
+    margin-top: 200px;
 }
 #hero {
     display: flex;
@@ -74,6 +73,12 @@ p {
 .hero-text {
     text-align: center;
     text-transform: uppercase;
+    margin-top: -25px;
+    font-size: 1.5em;
+}
+
+.hero-text p {
+    font-weight: 800;
 }
 
 #rose {
@@ -115,6 +120,7 @@ section h1 {
     font-size: 50px;
     margin-bottom: 15px;
     text-align: center;
+    text-transform: uppercase;
 }
 
 section {
@@ -135,7 +141,11 @@ section {
     background: #acccec;
 }
 
-.background-blue h1, .background-blue p, .background-blue a {
+.background-green {
+    background: #b0d8b0;
+}
+
+.background-blue h1, .background-blue p, .background-blue a, .background-green {
     color: #383239 !important;
 }
 
@@ -239,6 +249,38 @@ footer p {
 }
 
 .hero-logo {
-    width: 30vw;
+    width: 20vw;
     z-index: 10;
+    transition-duration: 0.5s;
+}
+
+.hero-logo:hover {
+    width: 22vw;
+}
+
+@media (max-width: 600px) {
+    .hero-text {
+        margin-top: 0px;
+    }
+    .hero-text p {
+        display: none;
+    }
+    .hero-overlay {
+        margin-top: 45px;
+    }
+    .hero-text a {
+        font-size: 0.5em;
+        font-weight: 800;
+        background: #383239;
+        opacity: 1;
+    }
+    section {
+        padding: 10px 5vw;
+    }
+    section p {
+        font-size: 18px;
+    }
+    .faq {
+        width: 100%;
+    }
 }
