--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ footer p {
         width: 50vw;
     }
     .email-button {
-        margin-top: 50vw; 
+        margin-top: 50vw;
     }
 }
 
@@ -322,4 +322,19 @@ footer p {
 .stats p {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+.social {
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+    color: white;
+}
+
+.social a {
+    text-decoration: none;
+}
+.fab {
+    padding-left: 10px;
+    padding-right: 10px;
 }
