--- a/css/main.css
+++ b/css/main.css
@@ -227,6 +227,18 @@ section p {
 .bluenette img:hover {
   -webkit-filter: drop-shadow(0px 0px 20px rgb(61, 135, 255));
 }
+.venus {
+  padding: 0 35%;
+}
+
+.venus img {
+  width: 100%;
+  -webkit-filter: drop-shadow(0px 0px 0px rgb(80,68,72));
+}
+
+.venus img:hover {
+  -webkit-filter: drop-shadow(0px 0px 20px rgb(80,68,72));
+}
 
 a {
   color: white;
