adding participant forms by @janine

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,11 @@ section {
   background: #383239;
 }
 
+.background-teal {
+  background: #6a958d;
+  color: #383239 !important;
+}
+
 .background-blue {
   background: #acccec;
   color: #383239 !important;
@@ -182,6 +187,8 @@ section p {
 
 .sponsor-cta a {
   color: #1a1a1a;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .sponsors-img-container {
@@ -233,11 +240,11 @@ section p {
 
 .venus img {
   width: 100%;
-  -webkit-filter: drop-shadow(0px 0px 0px rgb(80,68,72));
+  -webkit-filter: drop-shadow(0px 0px 0px rgb(80, 68, 72));
 }
 
 .venus img:hover {
-  -webkit-filter: drop-shadow(0px 0px 20px rgb(80,68,72));
+  -webkit-filter: drop-shadow(0px 0px 20px rgb(80, 68, 72));
 }
 
 a {
@@ -355,6 +362,44 @@ footer p {
   padding: 0 10%;
 }
 
+.form-img {
+  width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.form-img:hover {
+  width: 200px;
+}
+
+.forms a {
+  text-decoration: none !important;
+}
+
+.forms h2 {
+  font-size: 2em;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: "Arvo", serif;
+  color: white;
+}
+
+@media (max-width: 700px) {
+  .forms h2 {
+    font-size: 0.5em;
+  }
+}
+
+.forms p {
+  padding-top: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .stats h2 {
   font-size: 5em;
   margin-top: 0;
@@ -406,6 +451,11 @@ footer p {
 
 #about {
   text-align: left;
+}
+
+#about a {
+  text-decoration: none;
+  color: #ffd973;
 }
 
 /* Accordian styles */
