--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,9 @@ footer p {
   .email-button {
     bottom: unset;
   }
+  .row {
+    flex-wrap: wrap;
+  }
 }
 
 @media (max-width: 600px) {
@@ -587,6 +590,7 @@ footer p {
 .organizer {
   margin: 5% 10%;
   text-align: center;
+  text-decoration: none;
 }
 
 .icons {
