--- a/css/main.css
+++ b/css/main.css
@@ -360,14 +360,10 @@ footer p {
 }
 
 /* Fixes unclickable button in mobile landscape orientation*/
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 900px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) { 
-    .cta-button {
-      margin-top: 15vh !important;
-    }
+@media only screen and (min-device-width: 375px) and (max-device-width: 900px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+  .cta-button {
+    margin-top: 15vh !important;
+  }
 }
 
 .row {
@@ -489,6 +485,7 @@ footer p {
 #about a {
   text-decoration: none;
   color: #ffd973;
+  font-style: italic;
 }
 
 /* Accordian styles */
@@ -569,7 +566,6 @@ footer p {
   background-color: #4c585c;
 }
 
-
 .org-img {
   max-width: 50px;
   max-height: 50px;
@@ -579,11 +575,12 @@ footer p {
 
 .org-name {
   color: white;
-  font-family: 'Arvo', serif;
+  font-family: "Arvo", serif;
   font-size: 0.75em;
 }
 
-.org-img, .org-name {
+.org-img,
+.org-name {
   display: inline-block;
 }
 
@@ -614,26 +611,39 @@ footer p {
   pointer-events: none;
   position: absolute;
   z-index: -1;
-  content: '';
+  content: "";
   top: 100%;
   left: 5%;
   height: 10px;
   width: 90%;
   opacity: 0;
-  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
-  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.35) 0%, rgba(0, 0, 0, 0) 80%);
+  background: -webkit-radial-gradient(
+    center,
+    ellipse,
+    rgba(0, 0, 0, 0.35) 0%,
+    rgba(0, 0, 0, 0) 80%
+  );
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.35) 0%,
+    rgba(0, 0, 0, 0) 80%
+  );
   /* W3C */
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: transform, opacity;
   transition-property: transform, opacity;
 }
-.hvr-float-shadow:hover, .hvr-float-shadow:focus, .hvr-float-shadow:active {
+.hvr-float-shadow:hover,
+.hvr-float-shadow:focus,
+.hvr-float-shadow:active {
   -webkit-transform: translateY(-5px);
   transform: translateY(-5px);
   /* move the element up by 5px */
 }
-.hvr-float-shadow:hover:before, .hvr-float-shadow:focus:before, .hvr-float-shadow:active:before {
+.hvr-float-shadow:hover:before,
+.hvr-float-shadow:focus:before,
+.hvr-float-shadow:active:before {
   opacity: 1;
   -webkit-transform: translateY(5px);
   transform: translateY(5px);
