--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,9 @@ p {
   border: 1px solid white;
   padding: 10px 20px;
   margin-top: 20px;
-  position: relative;
   letter-spacing: 5px;
   transition: 0.25s;
-
+  z-index: 10;
 }
 
 .email-button:hover {
@@ -62,7 +61,7 @@ p {
   position: absolute;
   z-index: 15;
   text-align: center;
-  margin-bottom: 10vh;
+  margin-top: 3vh;
 }
 #hero {
   display: flex;
@@ -78,7 +77,7 @@ p {
   font-size: 1.5em;
   position: absolute;
   z-index: 10;
-  margin-top: -150px;
+  margin-top: 40px;
 
   padding-top: 60vh;
 }
